<resources>
    <string name="app_name">AttraLive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Awnish Kumar</string>
    <string name="nav_header_subtitle">awnish.kumar</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Menu String-->
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="action_facilities">Facilities</string>
    <string name="action_holidayCalender">Holiday Calender</string>
    <string name="landD">L&amp;D</string>
    <string name="commingSoon">Coming Soon</string>
    <string name="title_home">Home</string>
    <string name="title_event">Event</string>
    <string name="title_blog">Blog</string>
    <string name="title_forum">Forum</string>
    <string name="profile">Profile</string>
    <string name="gallery">Gallery</string>
    <string name="holiday_calender">Holiday Calender</string>
    <string name="facilities">Facilities</string>
    <string name="resetpassword">Reset Password</string>
    <string name="enter_current_password">Current Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="cancel">Cancle</string>


    <!--Dashboard Screen String-->
    <string name="likes">Likes</string>
    <string name="presents">Presents</string>
    <string name="comments">Comments</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="post_your_thought">Post your thoughts</string>
    <string name="report">Report</string>
    <string name="disable">Disable</string>

    <!--OTP validation screen-->
    <string name="enter_the_otp">Please enter the 4-digit OTP</string>
    <string name="have_not_received_OTP">Haven\'t received OTP</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="validate">VALIDATE</string>

    <!--User Details Update screen-->
    <string name="please_update_your_details">Welcome user,Update Your Profile</string>
    <string name="profileDetails">Profile Details</string>
    <string name="user_name">Enter your Name</string>
    <string name="gender">Gender</string>
    <string name="designation">Designation</string>
    <string name="work_location">Work Location</string>
    <string name="dob">DOB</string>
    <string name="bu">Select BU</string>
    <string name="mobile_no">Enter Your Mobile Number</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="continueBTn">Continue</string>
    <string name="emp_Id">Emp Id</string>

    <!--Forgot password Screen-->
    <string name="forgot_password">Forgot Password ?</string>
    <string name="we_just_need">We just need your registered Email Id to send your password reset instructions</string>
    <string name="registered_email_id">Registered Email Id</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login_page">Back to Login Page</string>


    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!--Notification String-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="post">POST</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>

    <!-- TODO: Remove or change this placeholder text -->
//Event screen
    <string name="register">REGISTER</string>
    //Login Screen
    <string name="welcome">Hi! Welcome to</string>
    <string name="attra">Attra</string>
    <string name="live">LIVE</string>
    <string name="login">LOGIN</string>
    <string name="username_text">USERNAME</string>
    <string name="password_text">PASSWORD</string>
    <string name="email_text">"@attra.com.au"</string>
    <string name="forgotpswd_text">Forgot Password</string>
    <string name="rememberme_text">Remember me</string>
    <string name="emptyusername_text">Username cannot be empty</string>
    <string name="usernameerror_text">Email should be in correct format</string>
    <string name="passworderror_text">Password can not be empty</string>
    <string name="save">Save</string>

    //Registration Screen
    <string name="signup_text">SIGN UP!</string>
    <string name="fullname_text">FULL NAME</string>
    <string name="regemail_text">EMAIL</string>
    <string name="confirmpswd_text">CONFIRM PASSWORD</string>
    <string name="continue_text">CONTINUE</string>
    <string name="register_here">Not a user? Register Here</string>
    <string name="agree">I agree to the</string>
    <string name="tnm"><u>Terms and Conditions</u></string>
    <string name="tnms">Terms and Conditions</string>
    <string name="close">Close</string>
    <string name="error_checkbox">Please agree to the terms and conditions</string>


    <string name="termscontent">
        1. The app will be hosted on Amazon Web Services (AWS) cloud till Attraction 2018 till 28th Feb 2018 \n
        2. The app will be migrated to internal Attra servers post Attraction 2018\n
        3. Mobile numbers and Attra email ids of the employees installing this app, will be stored on AWS for sending updates and generic org wide messages till 28th Feb 2018\n
        4. Pictures taken by Attra employees through this app, will be stored in the AWS cloud for the entire duration of apps being available i.e., till 28th Feb 2018\n
        5. Mobile numbers, email ids and the pictures will NOT be used for any purposes apart from the org wide updates if any, through the app.\n
        6. Employee\'s mobile numbers will be retained to send generic org wise updates and for newer features of the app. This communication mode will continue till he/she is an Attra employee\n
        7. The terms and conditions will be updated, for the app with additional features and usage post Attraction 2018\n
        8. On acceptance of these terms and conditions, Attra will not be liable for any personal data misuse
    </string>
    <string name="about_us_content">Attraction 2018 is an Attra in-house built application by Digital Practice team, L &amp; D Team and with inputs from Corporate Strategy.\nIt reinstates our focused direction towards \'Attra 3.0 journey\' and thus first time our own in-house customized mobile application has been launched.\nThe application was made within a quick turnaround of approximately only two weeks.\n\nWe will appreciate your feedbacks on this application. Please reach out to <b><u>mobility@attra.com.au</u></b> in case of your feedbacks and suggestions.</string>

    <string name="answer_submitted">Your answers has been submitted.</string>
    <string name="alert_quiz">Your answers has been submitted already.</string>
    <string name="alert">Alert</string>
    <string name="score">Score</string>
    <string name="score_content"><b>Your score is: </b></string>
    <string name="quiz_content">Quiz is available for <b>1 time participation only</b> for all employees across locations. For a selected set of users with all <b>right answers in the 1st attempt</b>, will get some surprise gifts. Happy Quizzing !!!</string>
    <string name="submit_quiz_content">Note: Thanks for participating. The correct answers will be supplied post Attraction 2018. The quiz will be available for multiple Q&amp;A. The intent of the Quiz is to generate interest in Digital Payments. For more details, please refer to Digipedia.</string>

    <string name="error_answer">Please answer all the questions</string>
    <string name="digiquiz">Digi Quiz</string>
    <string name="okbtn">OK</string>
    <string name="submit_btn">Submit</string>

    <string name="helpcontent">
        1. Employee registers through Attra email id, mobile number and location of the event\n
        2. Before registration completion, employee has to accept the Terms and conditions\n
        3. A unique one time randomly generated PIN is sent to the employees Attra email id\n
        4. The user has to login using the Attra email id and the unique PIN\n
        5. In case the user forgets the PIN, Forgot PIN link can be accessed and the user will be prompted for entering his/her Attra email id
    </string>
    <string name="helpbutton">Help for Registration</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">EC-Phase II,Hosur road,"\n"
    560068</string>
    <string name="registrationid">REGISTRATION ID"\n\n"
    ATT3224312</string>

    <!-- Holiday Calender-->
    <string name="sn1">1</string>
    <string name="sn2">2</string>
    <string name="sn3">3</string>
    <string name="sn4">4</string>
    <string name="sn5">5</string>
    <string name="sn6">6</string>
    <string name="sn7">7</string>
    <string name="sn8">8</string>
    <string name="sn9">9</string>
    <string name="sn10">10</string>
    <string name="sn11">11</string>

    <string name="Jan_1">1-Jan-19 </string>
    <string name="jan_14">14-Jan-19</string>
    <string name="mar_21">21-Mar-19</string>
    <string name="may_1">1-May-19</string>
    <string name="aug_15">15-Aug-19</string>
    <string name="sept_2">2-Sep-19</string>
    <string name="oct_2"> 2-Oct-19</string>
    <string name="oct_7">7-Oct-19</string>
    <string name="oct_28">28-Oct-19</string>
    <string name="nov_1">1-Nov-19</string>
    <string name="dec_25">25-Dec-19</string>


    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <string name="new_year_day">New year</string>
    <string name="Sankranti">Sankranti</string>
    <string name="Holi">Holi</string>
    <string name="May_Day_Labor_Day_Maharashtra_Day">May Day</string>
    <string name="Independence_Day">Independence Day</string>
    <string name="Ganesh_Chathurthi">Ganesh Chathurthi</string>
    <string name="Gandhi_Jayanti">Gandhi Jayanti</string>
    <string name="Dasara_Dussehra">Dasara/ Dussehra </string>
    <string name="Diwali">Diwali</string>
    <string name="Kannada_Rajyotsava">Kannada Rajyotsava</string>
    <string name="Christmas">Christmas</string>
    <string name="title_activity_event_location">Map</string>


</resources>
