<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_holidayCalender"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/action_holidayCalender" />
    </group>

    <item android:title="@string/commingSoon">
        <menu >
            <item
                android:id="@+id/nav_landD"
                android:icon="@drawable/ic_local_library_black_24dp"
                android:title="@string/landD" />
            <item
                android:id="@+id/nav_facilities"
                android:icon="@drawable/ic_layers_black_24dp"
                android:title="@string/action_facilities" />
        </menu>
    </item>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/action_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/action_logout" />
    </group>
</menu>
