<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/bottom_home_icon_selectior"
        app:labelVisibilityMode="labeled"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/bottom_event_icon_selectior"
        app:labelVisibilityMode="labeled"
        android:title="@string/title_event" />

    <item
        android:id="@+id/navigation_blog"
        android:icon="@drawable/bottom_blog_icon_selectior"
        app:labelVisibilityMode="labeled"
        android:title="@string/title_blog" />

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/bottom_forum_icon_selectior"
        app:labelVisibilityMode="labeled"
        android:title="@string/title_forum" />

</menu>
