<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/illustration_fp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="13dp"
        android:textSize="20sp"
        android:textColor="#4c5a52"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="4sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textSize="16sp"
        android:textColor="#949c97"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="3sp"
        android:gravity="center_horizontal"
        tools:text="@string/we_just_need"
        />

    <EditText
        android:id="@+id/et_forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_gravity="center"
        android:hint="@string/registered_email_id"/>

    <Button
        android:id="@+id/btn_resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/reset_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_backspace_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#949c97"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="3sp"
            android:gravity="center_horizontal"
            android:text="@string/back_to_login_page"/>
    </LinearLayout>

</LinearLayout>