<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="#4c5a52"
        android:lineSpacingExtra="10sp"
        android:layout_gravity="center"
        tools:text="@string/enter_the_otp" />
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/otp_num1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"
            android:gravity="center"/>

        <EditText
            android:id="@+id/otp_num2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"
            android:gravity="center"/>

        <EditText
            android:id="@+id/otp_num3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"
            android:gravity="center"/>

        <EditText
            android:id="@+id/otp_num4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_otpNotReceived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="11sp"
            android:textColor="#32b0e4"
            android:textSize="13sp"
            android:layout_marginLeft="23dp"
            tools:text="@string/have_not_received_OTP" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_resendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#32b0e4"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="3sp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            tools:text="@string/resend_otp"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#1eaa4b"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="3sp"
        android:gravity="right"
        android:text="@string/validate"
        />

</LinearLayout>