<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".activity.OtpValidationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:foreground="@drawable/color_gradient"
        android:src="@drawable/homescreenimage" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginLeft="-40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/attra_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="16dp"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/iv_close_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="5dp"
            android:src="@drawable/ic_close_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="10sp"
            android:text="@string/enter_the_otp"
            android:textColor="#4c5a52"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/otp_num1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />

            <EditText
                android:id="@+id/otp_num2"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />

            <EditText
                android:id="@+id/otp_num3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />

            <EditText
                android:id="@+id/otp_num4"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_otpNotReceived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="12sp"
                android:text="@string/have_not_received_OTP"
                android:textColor="#32b0e4"
                android:textSize="14sp"
                android:textStyle="italic" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_resendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:gravity="center_horizontal"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="3sp"
                android:text="@string/resend_otp"
                android:textColor="#32b0e4"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="3sp"
            android:text="@string/validate"
            android:textColor="#1eaa4b"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</FrameLayout>