<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PasswordRecover">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register_main"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true" >

        <View
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true" />

        <ScrollView
            android:id="@+id/ScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/registration_background"
            android:padding="25dp" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/Register_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/forgotpswd_text"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/username_edtext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Register_tv"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:maxLength="4"
                    android:background="@drawable/register_uname"
                    android:gravity="center"
                    android:hint="@string/enter_the_otp"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passwd_edtext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username_edtext"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/register_password"
                    android:gravity="center"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/cnfpasswd_edtext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passwd_edtext"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/register_password"
                    android:gravity="center"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cnfpasswd_edtext"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="23dp"
                    android:background="@drawable/register_button"
                    android:text="@string/save"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

            </RelativeLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/register_imview" />

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>